--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://axeholder.github.io/los-ice-creamos",
+  "homepage": "https://zombik007.github.io/los-ice-creamos",
   "scripts": {
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html",
@@ -12,13 +12,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/axeholder/los-ice-creamos.git"
+    "url": "git+https://github.com/Zombik007/los-ice-creamos.git"
   },
   "keywords": [],
   "author": "Team 11",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/axeholder/los-ice-creamos/issues"
+    "url": "https://github.com/Zombik007/los-ice-creamos/issues"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0",
